2011-07-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* spherula.C:
	New demo ... for playing with Legendification and EGM data.

	* tringula.C:
	Use new Legendrofying functions for spherical tringulas.

2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* solar_system.C:
	Follow-up on changes in OdeCrawler.

2010-09-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Randomly colorize staticos with witish colors.

2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Add a custom-made dyno mesh.

	* dyno.gts:
	New file -- custom made dyno mesh.

	* tringula.C:
	Import dyno.gts as one of the random meshes.
	Manually generate vertex/triangle normals for terrain surfaces
	imported from GTS surfaces.

2010-07-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* oolite_load.C:
	New macro -- test loading of OOlite model files.

2010-01-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C: Change gl-menu-button for Crawler-drive to its new
	name in a different class (TringuCam->TSPupilInfo).

2010-01-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add "Shoot" to Crawler menu.
	CrawlerSpiritio does not have gun-al-source anymore.

2010-01-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Put tringula fields under "var/fields". This is not perfect as
	they really depend on what player knows but is better then to have
	them as children of TringuRep.

2010-01-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* sounds/big_explosion.ogg:
	* sounds/big_explosion.wav:
	Replace wav with ogg.

	* tringula.C:
	Switch to ogg files.

2010-01-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Create a TringulaTester instance.

2010-01-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Set PupilInfo link of TringuRep.

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Move explode button to Extendio (from Crawler).

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Put extendio menues into "var/glassui".
	Add entry for Extendio.